Closed
Bug 668633
Opened 14 years ago
Closed 14 years ago
Elements with scrollable overflow are cut off when panning (e.g. Google Reader)
Categories
(Firefox for Android Graveyard :: Panning/Zooming, defect, P2)
Tracking
(firefox7+ fixed, fennec7+)
VERIFIED
FIXED
Firefox 7
People
(Reporter: tarend, Assigned: stechz)
References
()
Details
(Keywords: regression, verified-aurora)
Attachments
(2 files)
|
150.40 KB,
image/png
|
Details | |
|
2.01 KB,
patch
|
roc
:
review+
asa
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
(1) use phony to switch user agent to "Desktop Firefox"
(2) Go to reader.google.com
(3) click on a "long" article and double-click to zoom and pan up and down
Result: (See screenshot) - article gets cut off on the right
Expected: article remains visible
Updated•14 years ago
|
Keywords: regression
Comment 1•14 years ago
|
||
This is also easy to see in http://people.mozilla.com/~bstover/scrolling.html
I noticed it in a Fennec 7.0 nightly on Android.
tracking-fennec: --- → ?
status-firefox7:
--- → affected
Comment 2•14 years ago
|
||
We should track this for Fx7; it's a regression that breaks rendering of some pages in Fennec.
tracking-firefox7:
--- → ?
Component: General → Panning/Zooming
Keywords: regressionwindow-wanted
QA Contact: general → pan-zoom
Summary: Google Reader: Article cut off when scrolling → Elements with scrollable overflow are cut off when panning (e.g. Google Reader)
Comment 3•14 years ago
|
||
is this the same as bug 667516?
Comment 4•14 years ago
|
||
Still need a regression window.
Ben - can you take a look?
Assignee: nobody → ben
tracking-fennec: ? → 7+
Updated•14 years ago
|
| Assignee | ||
Comment 5•14 years ago
|
||
| Assignee | ||
Comment 6•14 years ago
|
||
Comment on attachment 546229 [details] [diff] [review]
Elements with scrollable overflow are cut off when panning
I think this bug must be a regression from 637852. This fixes the issue (and also removes another bug where subsequent sibling layers got the product of all of its previous sibling layers, though I doubt this ever has come up in practice).
Attachment #546229 -
Flags: review?(roc)
Comment on attachment 546229 [details] [diff] [review]
Elements with scrollable overflow are cut off when panning
Review of attachment 546229 [details] [diff] [review]:
-----------------------------------------------------------------
Attachment #546229 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 8•14 years ago
|
||
Pushed to inbound http://hg.mozilla.org/integration/mozilla-inbound/rev/35ed7537c909
Comment 9•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 8
Comment 10•14 years ago
|
||
Comment on attachment 546229 [details] [diff] [review]
Elements with scrollable overflow are cut off when panning
Requesting approval-mozilla-aurora for this patch, which fixes a regression in Gecko 7 that causes many pages to render incorrectly in Fennec.
Attachment #546229 -
Flags: approval-mozilla-aurora?
Updated•14 years ago
|
Attachment #546229 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 11•14 years ago
|
||
Target Milestone: Firefox 8 → Firefox 7
Updated•14 years ago
|
Keywords: regressionwindow-wanted
Comment 13•14 years ago
|
||
Verified fixed on Aurora: Mozilla /5.0 (Android;Linux armv7l;rv:7.0a2) Gecko/20110721 Firefox/7.0a2 Fennec/7.0a2
Device: LG Optimus 2X
Status: RESOLVED → VERIFIED
Updated•14 years ago
|
Keywords: verified-aurora
You need to log in
before you can comment on or make changes to this bug.
Description
•