Bug 668633 Elements with scrollable overflow are cut off when panning r=roc